# report_agent

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
analysis/: analyzer.py  metrics_loader.py  metrics_registry.py
configs/: metrics.yml
connectors/: clickhouse_connector.py
dbt_context/: from_docs_json.py
report_agent/analysis/: agent_tools.py  metrics_loader.py  metrics_registry.py  thresholds.py
report_agent/cli/: main.py
report_agent/configs/: metrics.yml
report_agent/connectors/: clickhouse_connector.py
report_agent/connectors/db/: clickhouse_connector.py
report_agent/connectors/llm/: base.py  openai.py
report_agent/connectors/llm_connector/: base.py  code_interpreter.py  openai.py
report_agent/connectors/messaging/: slack.py
report_agent/dbt_context/: from_docs_json.py
report_agent/metrics/: metrics.yml  metrics_loader.py  metrics_registry.py
report_agent/nlg/: cross_metric_service.py  html_report.py  prompt_builder.py  report_service.py  summary_service.py
report_agent/nlg/templates/: ci_report_prompt.j2  ci_snapshot_prompt.j2  index.html.j2  report_page.html.j2  summary_page.html.j2  summary_prompt.j2  weekly_report_prompt.j2
report_agent/utils/: config_loader.py
reports/: 2025-09-12_api_p2p_discv4_clients_daily.html  2025-11-26_api_p2p_discv4_clients_daily.html  portfolio_summary.html
reports/data/: api_p2p_discv4_clients_daily.csv
reports/text/: api_p2p_discv4_clients_daily.txt
utils/: config_loader.py
