[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "report_agent"
version         = "0.1.0"
description     = "AI-powered weekly reporting agent for Gnosis Chain"
readme          = "README.md"
license         = { file = "LICENSE" }
authors         = [
  {name = "mlaegn"}
]
requires-python = ">=3.9"

dependencies = [
  "clickhouse-connect>=0.8.18",    
  "pandas>=2.3.1",                   
  "jinja2>=3.1.6",                   
  "google-generativeai>=0.8.5",      
  "python-dotenv>=1.1.1",          
  "requests>=2.32.4",                
  "plotly>=6.2.0",                  
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "black>=25.1.0",
  "isort>=6.0.1",
  "flake8>=7.3.0",
]